force-app/main/default/objects/Creditsafe_Company_Additional_Info_NL__c/Creditsafe_Company_Additional_Info_NL__c.object-meta.xml
<CustomObject>
    <label>Creditsafe Company Additional Info NL</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>CreditsafeCompany Additional Info NL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Additional Info NL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>