force-app/main/default/objects/Creditsafe_Company_Additional_Info_NL__c/fields/Day_Sales_Outstanding_Median__c.field-meta.xml
<CustomField>
    <fullName>Day_Sales_Outstanding_Median__c</fullName>
    <description>The middle value of the estimated number of days taken to pay the business.</description>
    <label>Day Sales Outstanding Median</label>
    <length>255</length>
    <type>Text</type>
</CustomField>