force-app/main/default/objects/Creditsafe_Company_Additional_Info_NL__c/fields/Industry_Average_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Industry_Average_Credit_Rating__c</fullName>
    <description>The average credit rating for the company’s activity code.</description>
    <label>Industry Average Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>