force-app/main/default/objects/Creditsafe_Company_Additional_Info_NL__c/fields/Payment_Expectation_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectation_Days__c</fullName>
    <description>The estimated number of days until payment from the business.</description>
    <label>Payment Expectation Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>