force-app/main/default/objects/Creditsafe_Company_Additional_Info_NL__c/fields/Payment_Expectation_Days_Lower__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectation_Days_Lower__c</fullName>
    <description>The lower value for the company ranked 1/4 divided by industry code.</description>
    <label>Payment Expectation Days Lower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>